--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "autonote",
+  "homepage":"https://autonote-webapp.firebaseapp.com/react-app",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
